<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_500"
    android:padding="8dp"
    tools:context=".Comprar">

    <LinearLayout
        android:id="@+id/ll_predio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/ll_opcion_cm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <ImageView
            android:id="@+id/iv_predio"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/apto_1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_predio_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_300"
            android:gravity="center_horizontal"
            android:text="@string/texto_direccion_compra"
            android:enabled="false"
            android:textColor="@color/white"
            android:textSize="32dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_opcion_cm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/blue_300"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_predio"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/texto_op_compra"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24dp"/>


    <LinearLayout

        android:id="@+id/ll_botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_comprar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_900"
            android:text="@string/texto_comprar"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_alquilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_900"
            android:text="@string/texto_alquilar"
            />
    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>