<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_300"
    android:padding="@dimen/pad_login"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_llave"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/key_login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_titulo_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/texto_logo"
            android:textColor="@color/white"
            android:textSize="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_sesion"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_boton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_llave"
        app:layout_constraintVertical_bias="0.37">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_usuario_l"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_nombre"
            app:boxStrokeColor="@color/white"
            app:endIconMode="none"
            app:startIconContentDescription="nombre completo">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/tie_usuario_l"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_nombre"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_clave_l"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_clave"
            app:boxStrokeColor="@color/white"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="nombre completo">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/tie_clave_l"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_clave"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout

        android:id="@+id/ll_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_texto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_900"
            android:text="@string/texto_login"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>